--- a/app/about.html
+++ b/app/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru"><!-- InstanceBegin template="/Templates/inner.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -10,9 +10,9 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- TemplateBeginEditable name="doctitle" -->
-<title>Главная</title>
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>О нас</title>
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -31,8 +31,8 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
-<!-- TemplateBeginEditable name="head" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -43,10 +43,10 @@
 			<!-- =navbar -->
 			<nav id="navbar" class="header__nav">
 				<ul class="nav nav-tabs" role="tablist">
-					<li><a class="nav-link" href="../homepage.html" title="">Главная</a></li>
-					<li><a class="nav-link" href="../about.html" title="">О нас</a></li>
+					<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
+					<li><a class="nav-link" href="about.html" title="">О нас</a></li>
 					<li>
-						<a class="nav-link" href="../services.html" title="">Услуги</a>
+						<a class="nav-link" href="services.html" title="">Услуги</a>
 						<div class="subnav">
 							<ul>
 								<li class="active"><a href="#">Электромонтажные работы</a></li>
@@ -63,14 +63,14 @@
 						<a class="nav-link" href="#" title="">Интересное</a>
 						<div class="subnav">
 							<ul>
-								<li><a href="../articles.html" title="">Статьи</a></li>
-								<li><a href="../news.html" title="">Новости</a></li>
-								<li><a href="../faq.html" title="">Вопрос? Ответ!</a></li>
+								<li><a href="articles.html" title="">Статьи</a></li>
+								<li><a href="news.html" title="">Новости</a></li>
+								<li><a href="faq.html" title="">Вопрос? Ответ!</a></li>
 								<li><a href="#" title="">Отзывы о нашей работе</a></li>
 							</ul>
 						</div>
 					</li>
-					<li><a class="nav-link" href="../contacts.html" title="">Контакты</a></li>
+					<li><a class="nav-link" href="contacts.html" title="">Контакты</a></li>
 				</ul>
 				<div class="show-sm">
 					<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
@@ -106,18 +106,22 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- TemplateBeginEditable name="main" -->
+<!-- InstanceBeginEditable name="main" -->
 		<!-- =breadcrumbs -->
 		<div class="breadcrumbs">
 			<ul class="B_crumbBox">
 				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb"></span></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">о нас</span></li>
 			</ul>
 		</div>
 		<!-- =/breadcrumbs -->
 		
+
+		<main>
+			<h1 class="title">О НАШЕЙ КОМПАНИИ</h1>
+		</main>
 		
-<!-- TemplateEndEditable -->			
+<!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
@@ -238,11 +242,11 @@
 
 
 <div id="outdated"></div>
-<link rel="stylesheet" property="stylesheet" href="../outdatedbrowser/outdatedbrowser.min.css" />
+<link rel="stylesheet" property="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 
 <script src="/template/js/owl.carousel.min.js"></script>
-<link rel="stylesheet" property="stylesheet" href="../template/css/owl.carousel.css">
+<link rel="stylesheet" property="stylesheet" href="template/css/owl.carousel.css">
 
 <script src="https://ajax.microsoft.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 <script>window.jQuery || document.write('<script src="template/js/jquery.validate.min.js"><\/script>')</script>
@@ -284,4 +288,4 @@ ymaps.ready(function () {
 })
 </script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
