--- a/app/homepage.html
+++ b/app/homepage.html
@@ -40,10 +40,10 @@
 		<!-- =navbar -->
 		<nav id="navbar" class="header__nav">
 			<ul class="nav nav-tabs" role="tablist">
-				<li><a class="nav-link" href="#" title="">Главная</a></li>
-				<li><a class="nav-link" href="#" title="">О нас</a></li>
-				<li class="active">
-					<a class="nav-link" href="#" title="">Услуги</a>
+				<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
+				<li><a class="nav-link" href="about.html" title="">О нас</a></li>
+				<li>
+					<a class="nav-link" href="services.html" title="">Услуги</a>
 					<div class="subnav">
 						<ul>
 							<li class="active"><a href="#">Электромонтажные работы</a></li>
@@ -60,14 +60,14 @@
 					<a class="nav-link" href="#" title="">Интересное</a>
 					<div class="subnav">
 						<ul>
-							<li><a href="#" title="">Статьи</a></li>
-							<li><a href="#" title="">Новости</a></li>
-							<li><a href="#" title="">Вопрос? Ответ!</a></li>
-							<li><a href="#" title="">Отзывы о нашей работе</a></li>
+							<li><a href="articles.html" title="">Статьи</a></li>
+							<li><a href="news.html" title="">Новости</a></li>
+							<li><a href="faq.html" title="">Вопрос? Ответ!</a></li>
+							<li><a href="reviews.html" title="">Отзывы о нашей работе</a></li>
 						</ul>
 					</div>
 				</li>
-				<li><a class="nav-link" href="#" title="">Контакты</a></li>
+				<li><a class="nav-link" href="contacts.html" title="">Контакты</a></li>
 			</ul>
 			<div class="show-sm">
 				<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
