--- a/app/about.html
+++ b/app/about.html
@@ -117,10 +117,138 @@
 		<!-- =/breadcrumbs -->
 		
 
-		<main>
+		<main class="text">
 			<h1 class="title">О НАШЕЙ КОМПАНИИ</h1>
+			<p>Компания "ЩелковоЭЛЕКТРИК" предоставляет полный спектр услуг по электромонтажу любой сложности в Московской области. Мы производим услуги от установки розетки до полной замены проводки в доме, квартире, коттедже, даче, магазине, офисе. </p>
+			<br>
+			<p>В нашей компании работают электрики с допусками и большим опытом работ, соблюдая все правила и нормы (СНиП). </p>
+			<br>
+			<p>Электрик на дом осуществляет выезд в города Московской области: <a href="#" title="">Щелково</a>,  <a href="#" title="">Мытищи</a>,  <a href="#" title="">Королев</a>,  <a href="#" title="">Ивантеевка</a>,  <a href="#" title="">Юбилейный</a>, <a href="">Лосино-Петровский</a>,  <a href="#" title="">Монино</a>,  <a href="#" title="">Купавна</a>,  <a href="#" title="">Ногинск</a>,  <a href="#" title="">Электросталь</a> и другие близлежащие населенные пункты.</p>
+			<br>
+			<p>Так же производятся выезд специалиста для замены проводки под ключ в частных домах, коттеджах и прочих строениях на этапе внутренних работ. </p>
+			<br>
+			<p>При планируемых больших объемах работ есть возможность вызвать электрика бесплатно - для оценки стоимости электромонтажных услуг и дальнейшего их заказа.</p>
+			<br>
+			<p>Наши <a href="#" title="">цены</a> непременно Вас порадуют!</p>
+			<br>
+			<p>Так же возможно вызвать электрика на дом в день обращения.</p>
 		</main>
-		
+
+		<!-- =team -->
+		<section class="team">
+			<header>
+				<h2 class="title">Наша команда</h2>
+			</header>
+			<div class="flexbox">
+				<div class="team__item">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-1.jpg" alt="Роман" /></div>
+						<div class="team__cell">
+							<div class="team__name">Алексей</div>
+							<div class="team__text">
+								<p>Опыт работы - более 10 лет.</p>
+								<p>Допуск по электробезопасности 4 группа.</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="team__item">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-2.jpg" alt="Роман" /></div>
+						<div class="team__cell">
+							<div class="team__name">Максим</div>
+							<div class="team__text">
+								<p>Опыт работы - более 5 лет.</p>
+								<p>Допуск по электробезопасности 3 группа.</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="team__item">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-3.jpg" alt="Роман" /></div>
+						<div class="team__cell">
+							<div class="team__name">Алиса</div>
+							<div class="team__text">
+								<p>Опыт работы - более 3 лет.</p>
+								<p>Допуск по электробезопасности 3 группа.</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="team__item">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-4.jpg" alt="Роман" /></div>
+						<div class="team__cell">
+							<div class="team__name">Владимир</div>
+							<div class="team__text">
+								<p>Опыт работы - более 2 лет.</p>
+								<p>Допуск по электробезопасности 2 группа.</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="team__item">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-5.jpg" alt="Роман" /></div>
+						<div class="team__cell">
+							<div class="team__name">Александр</div>
+							<div class="team__text">
+								<p>Опыт работы - более 10 лет.</p>
+								<p>Допуск по электробезопасности 4 группа.</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="team__item">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-6.jpg" alt="Роман" /></div>
+						<div class="team__cell">
+							<div class="team__name">Роман</div>
+							<div class="team__text">
+								<p>Опыт работы - более 7 лет.</p>
+								<p>Допуск по электробезопасности 5 группа.</p>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+		</section>
+		<!-- =/team -->
+
+
+		<!-- =feedback -->
+		<div class="feedback">
+			<div class="feedback__content text-center">
+				<p class="title">ХОТИТЕ ПРОКОНСУЛЬТИРОВАТЬСЯ ?</p>
+				<div class="vcard">
+					<div class="name"><span class="category">Электрика</span> <span class="fn org">SchelkovoElectric</span></div>
+					<div class="adr">
+						 <span class="postal-code">114100</span>, <span class="country">Россия</span>, <span class="region">Московская область</span>, <span class="locality">г.Щелково</span>
+					</div>
+					<div><a href="tel:+74951471711" class="tel">+7 (495) 147-1711</a> | <a href="mailto:info@schelkovo-electric.com" class="email" title="">info@schelkovo-electric.com</a></div>
+				</div>
+				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>
+			</div>
+			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">
+				<fieldset>
+					<div class="row">
+						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true" />
+						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true" />
+						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
+					</div>
+					<div class="row">
+						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>
+						<input type="submit" name="feedback" class="submit" value="отправить" />
+					</div>
+					<div class="qorder__form-row policy">
+						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">
+						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>
+					</div>
+				</fieldset>
+			</form>
+		</div>
+		<!-- =/feedback -->
 <!-- InstanceEndEditable -->			
 	</div>
 </div>
