Добавлено информационное всплывающее окно

--- a/app/about.html
+++ b/app/about.html
@@ -40,14 +40,14 @@
 <header class="header">
 	<div class="container">
 		<div class="flexbox">
-			<!-- =navbar -->
-			<nav id="navbar" class="header__nav">
+		  <!-- =navbar -->
+		  <nav id="navbar" class="header__nav">
 				<ul class="nav nav-tabs" role="tablist">
 					<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
 					<li><a class="nav-link" href="about.html" title="">О нас</a></li>
 					<li>
 						<a class="nav-link" href="services.html" title="">Услуги</a>
-						<div class="subnav">
+					  <div class="subnav">
 							<ul>
 								<li class="active"><a href="#">Электромонтажные работы</a></li>
 								<li><a href="#">Монтаж электропроводки</a></li>
@@ -61,7 +61,7 @@
 					<li><a class="nav-link" href="#" title="">Наши работы</a></li>
 					<li>
 						<a class="nav-link" href="#" title="">Интересное</a>
-						<div class="subnav">
+					  <div class="subnav">
 							<ul>
 								<li><a href="articles.html" title="">Статьи</a></li>
 								<li><a href="news.html" title="">Новости</a></li>
@@ -76,24 +76,24 @@
 					<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
 					<a class="hover-a" href="mailto:sales@shop-recovery.ru">sales@shop-recovery.ru</a>
 				</div>
-			</nav>
+		  </nav>
 			<button type="button" class="navbar-toggle">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
 			<button type="button" class="close-menu"><img src="/template/images/close-modal.png" alt=""></button>
-			<!-- =/navbar -->
+		  <!-- =/navbar -->
 
-			<!-- =contacts -->
+		  <!-- =contacts -->
 			<div class="contacts">
 				<a href="tel:+74951471711" class="contacts__tel">+7 (495) 147-1711</a>
 				<a href="#" title="" class="contacts__ring" data-toggle="modal" data-target="#callback" role="button">Заказать звонок</a>
 			</div>
-			<!-- =/contacts -->
+		  <!-- =/contacts -->
 			
 			<!-- =logo-->
-			<div class="logo">
+		  <div class="logo">
 				<a href="/" title=""><img src="/template/images/logo.png" alt="ShelkovoElectric" /></a>
 			</div>
 			<!-- =/logo-->
@@ -141,8 +141,8 @@
 			</header>
 			<div class="flexbox">
 				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-1.jpg" alt="Роман" /></div>
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Алексей" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-1.jpg" alt="Алексей" /></div>
 						<div class="team__cell">
 							<div class="team__name">Алексей</div>
 							<div class="team__text">
@@ -153,8 +153,8 @@
 					</a>
 				</div>
 				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-2.jpg" alt="Роман" /></div>
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Максим" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-2.jpg" alt="Максим" /></div>
 						<div class="team__cell">
 							<div class="team__name">Максим</div>
 							<div class="team__text">
@@ -165,8 +165,8 @@
 					</a>
 				</div>
 				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-3.jpg" alt="Роман" /></div>
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Алиса" data-id="2.php">
+						<div class="team__pic"><img src="images/team/people-3.jpg" alt="Алиса" /></div>
 						<div class="team__cell">
 							<div class="team__name">Алиса</div>
 							<div class="team__text">
@@ -177,8 +177,8 @@
 					</a>
 				</div>
 				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-4.jpg" alt="Роман" /></div>
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Владимир" data-id="2.php">
+						<div class="team__pic"><img src="images/team/people-4.jpg" alt="Владимир" /></div>
 						<div class="team__cell">
 							<div class="team__name">Владимир</div>
 							<div class="team__text">
@@ -189,8 +189,8 @@
 					</a>
 				</div>
 				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-5.jpg" alt="Роман" /></div>
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Александр" data-id="1.php">
+						<div class="team__pic"><img src="images/team/people-5.jpg" alt="Александр" /></div>
 						<div class="team__cell">
 							<div class="team__name">Александр</div>
 							<div class="team__text">
@@ -201,7 +201,7 @@
 					</a>
 				</div>
 				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-id="1.php">
+					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Роман" data-id="1.php">
 						<div class="team__pic"><img src="images/team/people-6.jpg" alt="Роман" /></div>
 						<div class="team__cell">
 							<div class="team__name">Роман</div>
@@ -368,6 +368,22 @@
 <!-- =/modal writeus -->
 
 
+<!-- InstanceBeginEditable name="EditRegion4" -->
+<!-- =modal infomodal -->
+<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="container">
+			<button type="button" data-dismiss="modal" class="close-modal">< <span>Х</span> ></button>
+			<div class="modal__content">
+				<h2 class="title"></h2>
+				<div class="modal__text"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- =/modal infomodal -->
+<!-- InstanceEndEditable -->
+
 
 <div id="outdated"></div>
 <link rel="stylesheet" property="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
@@ -379,41 +395,5 @@
 <script src="https://ajax.microsoft.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 <script>window.jQuery || document.write('<script src="template/js/jquery.validate.min.js"><\/script>')</script>
 <script src="/template/js/engine.js"></script>
-
-<script src="https://api-maps.yandex.ru/2.1.26/?lang=ru_UA"></script>
-
-<script>
-var map;
-var myCollection;	
-ymaps.ready(function () {
-	map = new ymaps.Map('ymap', {
-		center: [55.910526, 38.017170],
-		zoom: 13
-	});
-
-	myCollection = new ymaps.GeoObjectCollection(null, {
-		preset: 'islands#redDotIcon'
-	});
-	myCollection.add(new ymaps.Placemark(
-		[55.910526, 38.017170],
-		{
-			hintContent: 'SchelkovoELECTRIC',
-			balloonContent: ''
-		}
-	));
-
-	map.behaviors.disable('scrollZoom'); 
-
-	map.geoObjects.add(myCollection);
-
-	map.events.add('click', function onMapClick(e) {
-		if(map.behaviors.isEnabled('scrollZoom')) {
-			map.events.remove('click', onMapClick);
-		} else {
-			map.behaviors.enable(['scrollZoom']);
-		}
-	});
-})
-</script>
 </body>
 <!-- InstanceEnd --></html>
