--- a/app/about.html
+++ b/app/about.html
@@ -18,11 +18,6 @@
 <script src="/template/js/libs.min.js"></script>
 <script src="/template/js/jquery.bxslider.min.js"></script>
 
-
-<!--[if !IE]><<!--></!-->
-<script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
-<!--<![endif]-->
-
 <!--[if IE]>
 	<link href="/template/css/styles-ie.css" rel="stylesheet" type="text/css" />
 <![endif]-->
@@ -323,7 +318,7 @@
 <div class="modal fade callback" id="callback" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">< <span>Х</span> ></button>
+			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
 			<form action="#" method="post" class="form-policy" id="callback-form">
 				<fieldset>
 					<input type="text" name="name" class="form-control required" value="" placeholder="Ваше имя" tabindex="0" autofocus>
@@ -346,7 +341,7 @@
 <div class="modal fade writeus" id="writeus" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">< <span>Х</span> ></button>
+			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
 			<form action="#" method="post" class="form-policy" id="writeus-form">
 				<fieldset>
 					<div class="row">
@@ -354,7 +349,7 @@
 						<input name="tel" type="tel" value="" class="form-control required" required placeholder="номер телефона *" aria-required="true" />
 						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
 					</div>
-					<textarea name="msg" id="msg" cols="30" rows="10" placeholder="текст вашего сообщения" class="form-control"></textarea>
+					<textarea name="msg" cols="30" rows="10" placeholder="текст вашего сообщения" class="form-control"></textarea>
 					<input type="submit" name="feedback" class="submit" value="отправить" />
 					<div class="qorder__form-row policy">
 						<input type="checkbox" id="checkbox3" value="" name="checkbox" checked="checked" class="user-access">
@@ -373,7 +368,7 @@
 <div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">< <span>Х</span> ></button>
+			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
 			<div class="modal__content">
 				<h2 class="title"></h2>
 				<div class="modal__text"></div>
