--- a/app/services.html
+++ b/app/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru"><!-- InstanceBegin template="/Templates/inner.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -10,9 +10,9 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- TemplateBeginEditable name="doctitle" -->
-<title>Главная</title>
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Услуги</title>
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +26,8 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- TemplateBeginEditable name="head" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -38,10 +38,10 @@
 		  <!-- =navbar -->
 		  <nav id="navbar" class="header__nav">
 				<ul class="nav nav-tabs" role="tablist">
-					<li><a class="nav-link" href="../homepage.html" title="">Главная</a></li>
-					<li><a class="nav-link" href="../about.html" title="">О нас</a></li>
+					<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
+					<li><a class="nav-link" href="about.html" title="">О нас</a></li>
 					<li>
-						<a class="nav-link" href="../services.html" title="">Услуги</a>
+						<a class="nav-link" href="services.html" title="">Услуги</a>
 					  <div class="subnav">
 							<ul>
 								<li class="active"><a href="#">Электромонтажные работы</a></li>
@@ -58,14 +58,14 @@
 						<a class="nav-link" href="#" title="">Интересное</a>
 					  <div class="subnav">
 							<ul>
-								<li><a href="../articles.html" title="">Статьи</a></li>
-								<li><a href="../news.html" title="">Новости</a></li>
-								<li><a href="../faq.html" title="">Вопрос? Ответ!</a></li>
+								<li><a href="articles.html" title="">Статьи</a></li>
+								<li><a href="news.html" title="">Новости</a></li>
+								<li><a href="faq.html" title="">Вопрос? Ответ!</a></li>
 								<li><a href="#" title="">Отзывы о нашей работе</a></li>
 							</ul>
 						</div>
 					</li>
-					<li><a class="nav-link" href="../contacts.html" title="">Контакты</a></li>
+					<li><a class="nav-link" href="contacts.html" title="">Контакты</a></li>
 				</ul>
 				<div class="show-sm">
 					<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
@@ -101,18 +101,65 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- TemplateBeginEditable name="main" -->
+<!-- InstanceBeginEditable name="main" -->
 		<!-- =breadcrumbs -->
 		<div class="breadcrumbs">
 			<ul class="B_crumbBox">
 				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb"></span></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">услуги</span></li>
 			</ul>
 		</div>
 		<!-- =/breadcrumbs -->
 		
-		
-<!-- TemplateEndEditable -->			
+
+		<section class="allservices">
+			<header>
+				<h1>Услуги нашей компании</h1>
+			</header>
+			<div class="text">
+				<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>					
+			</div>
+
+			<div class="allservices__item" style="background-image: url(images/service-work.jpg);">
+				<a href="#" title="" class="allservices__link">
+					<h2 class="allservices__item-title">Электромонтажные работы</h2>
+					<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа. Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии.</p>
+				</a>
+			</div>
+			<div class="allservices__item" style="background-image: url(images/service-montage.jpg);">
+				<a href="#" title="" class="allservices__link">
+					<h2 class="allservices__item-title">Монтаж электропроводки</h2>
+					<p>Предлагаем свои услуги по монтажу электропроводки «под ключ» для квартир и частных домов, коттеджей, офисов, производственных помещений: от разработки проекта и составления сметы до запуска системы в работу и установки бытовой техники. В штате компании только профессиональные электрики с профильным образованием и стажем работы от 5 лет. В результате вы получаете полностью рабочую, готовую к эксплуатации и безопасную сеть с гарантией на 3 года.</p>
+				</a>
+			</div>
+			<div class="allservices__item" style="background-image: url(images/service-wiring.jpg);">
+				<a href="#" title="" class="allservices__link">
+					<h2 class="allservices__item-title">Разводка электрики</h2>
+					<p>Электромонтаж в многоквартирных и частных домах, коттеджах имеет некоторые существенные различия, которые важно учитывать при разводке электрики. Чтобы обеспечить разводку проводки в загородном доме, особняке или на даче, важно учитывать характеристики систем безопасности, установленных на придомовой территории; характеристики наружного освещения, датчиков движения и т. д.</p>
+				</a>
+			</div>
+			<div class="allservices__item" style="background-image: url(images/service-replace.jpg);">
+				<a href="#" title="" class="allservices__link">
+					<h2 class="allservices__item-title">Замена проводки</h2>
+					<p>Поможем поменять проводку независимо от сложности задачи, объёмов работ и давности последнего обновления электросистемы. Производим замену электропроводки и всей электрики с гарантией на 3 года. Обеспечим замену электросетей в любой квартире, независимо от площади и состояния. Все электрики имеют необходимые документы и допуски для работы, профильное образование и опыт работы не менее 5 лет.</p>
+				</a>
+			</div>
+			<div class="allservices__item" style="background-image: url(images/service-repairs.jpg);">
+				<a href="#" title="" class="allservices__link">
+					<h2 class="allservices__item-title">Ремонт электрики</h2>
+					<p>Предоставляем услуги по ремонту электрики в частных домах и квартирах и комплексному ремонту электропроводки на крупных промышленных, производственных объектах. Опыт и профессиональные навыки наших электриков позволяют избегать лишних расходов на исправление ошибок при электромонтаже, благодаря чему работы проводятся быстрее и стоимость услуг остаётся доступной. При особо крупных заказах и постоянным клиентам предоставляются скидки.</p>
+				</a>
+			</div>
+		</section>
+	
+		<!-- =share -->
+		<div class="share flexbox text-center">
+			<p>Поделитесь с друзьями нашим проектом!</p>
+			<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
+		</div>
+		<!-- =/share -->
+
+<!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
@@ -231,17 +278,29 @@
 <!-- =/modal writeus -->
 
 
-<!-- TemplateBeginEditable name="EditRegion4" -->
-
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" -->
+<!-- =modal infomodal -->
+<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="container">
+			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
+			<div class="modal__content">
+				<h2 class="title"></h2>
+				<div class="modal__text"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- =/modal infomodal -->
+<!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
-<link rel="stylesheet" property="stylesheet" href="../outdatedbrowser/outdatedbrowser.min.css" />
+<link rel="stylesheet" property="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 
 <script src="/template/js/owl.carousel.min.js"></script>
-<link rel="stylesheet" property="stylesheet" href="../template/css/owl.carousel.css">
+<link rel="stylesheet" property="stylesheet" href="template/css/owl.carousel.css">
  
 <script src="https://ajax.microsoft.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 <script>window.jQuery || document.write('<script src="template/js/jquery.validate.min.js"><\/script>')</script>
@@ -250,4 +309,4 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
