--- a/app/service.html
+++ b/app/service.html
@@ -122,7 +122,7 @@
 			</div>
 			<div class="gallery flexbox">
 				<div class="gallery__item">
-					<a href="tmp/1320070905_1.jpg" data-fancybox="gallery" title="">
+					<a href="images/big-1.jpg" data-fancybox="gallery" title="">
 						<img src="images/works/work-1.jpg" alt="" />
 					</a>
 				</div>
@@ -192,11 +192,9 @@
 				<br>
 				<br>
 				<h2 style="color: #307a56">СТОИМОСТЬ НЕБОЛЬШИХ РАБОТ ПО ЭЛЕКТРИКЕ</h2>
-
 				<p>Наши электрики выполняют самые разные работы. Многообразие видов работ и условий их исполнения непросто уместить на небольшой странице сайта. Поэтому здесь мы размещаем цены на самые запрашиваемые виды работ.</p>
 				<p>Для уточнения стоимости услуг электрика позвоните нам или заполните форму обратной связи внизу страницы: укажите Ваши контакты, город, куда нужно будет выехать, и опишите, что нужно будет делать.</p>
 
-				<br>
 				<table cellpadding="0" cellspacing="0" width="100%">
 					<tr>
 						<td width="800"><em><a href="#" title="">Замена / ремонт розетки / выключателя</a></em></td>
@@ -413,7 +411,8 @@
 
 <script src="/template/js/owl.carousel.min.js"></script>
 <link rel="stylesheet" property="stylesheet" href="template/css/owl.carousel.css">
- 
+<link rel="stylesheet" property="stylesheet" href="template/css/jquery.fancybox.min.css">
+
 <script src="https://ajax.microsoft.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 <script>window.jQuery || document.write('<script src="template/js/jquery.validate.min.js"><\/script>')</script>
 <script src="/template/js/engine.js"></script>
