Добавлены отзывы в "услуга"

--- a/app/service.html
+++ b/app/service.html
@@ -113,7 +113,7 @@
 		<!-- =/breadcrumbs -->
 	
 
-		<section class="">
+		<section>
 			<header>
 				<h1>Электромонтажные работы</h1>
 			</header>
@@ -246,7 +246,7 @@
 					</tr>
 				</table>
 
-<br>
+					<br />
 				<h2 class="text-center" style="color: #307a56">ЗАМЕНА ЭЛЕКТРОПРОВОДКИ. ПАНЕЛЬНЫЙ ДОМ ЗАМЕНА ЭЛЕКТРИКИ</h2>
 				<br>
 				<p class="text-center">
@@ -259,15 +259,72 @@
 		<!-- =reviews -->
 		<section class="reviews">
 			<header>
-				<h1>Отзывы наших клиентов</h1>
+				<p class="title">Отзывы наших клиентов</p>
 			</header>
-			<div class="reviews__carousel">
-				
+			<div class="reviews__carousel owl-carousel" id="foo3">
+				<div class="reviews__item">
+					<div class="reviews__top">Алексей, Королев, 18.06.2017</div>
+					<div class="reviews__question">
+						<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
+					</div>
+					<div class="reviews__answer">
+						<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
+					</div>
+				</div>
+				<div class="reviews__item">
+					<div class="reviews__top">Алексей, Королев, 18.06.2017</div>
+					<div class="reviews__question">
+						<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
+					</div>
+					<div class="reviews__answer">
+						<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
+					</div>
+				</div>
+				<div class="reviews__item">
+					<div class="reviews__top">Алексей, Королев, 18.06.2017</div>
+					<div class="reviews__question">
+						<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
+					</div>
+					<div class="reviews__answer">
+						<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- =/reviews -->
 
-		<a href="#" class="btn" role="button">ЗАКАЗАТЬ ЭЛЕКТРОМОНТАЖНЫЕ РАБОТЫ</a>
+		<a href="#" class="btn" role="button"><span>ЗАКАЗАТЬ ЭЛЕКТРОМОНТАЖНЫЕ РАБОТЫ</span></a>
+
+
+		<!-- =listlinks -->
+		<div class="listlinks">
+			<div class="container">
+				<div class="flexbox">
+					<ul>
+						<li><a href="#" title="">Что делать, если погас свет и нет тока?</a></li>
+						<li><a href="#" title="">Ремонтные, электромонтажные работы.</a></li>
+						<li><a href="#" title="">Электрическая сеть дома.</a></li>
+						<li><a href="#" title="">Схема квартирного электрощита.</a></li>
+						<li><a href="#" title="">Токи утечки. Ошибки монтажа.</a></li>
+					</ul>
+					<ul>
+						<li><a href="#" title="">Классификация проводников электротока.</a></li>
+						<li><a href="#" title="">Расчет сечения провода.</a></li>
+						<li><a href="#" title="">Коммутация проводов на клеммниках.</a></li>
+						<li><a href="#" title="">Электрическая защита.</a></li>
+						<li><a href="#" title="">Техника безопасности электропроводки.</a></li>
+					</ul>
+					<ul>
+						<li><a href="#" title="">Монтаж, подключение люстры.</a></li>
+						<li><a href="#" title="">Светодиодные лампы.</a></li>
+						<li><a href="#" title="">Источники бесперебойного питания.</a></li>
+						<li><a href="#" title="">Гофрированная труба для проводки.</a></li>
+						<li><a href="#" title="">Типы электропровода.</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<!-- =/listlinks -->
 
 <!-- InstanceEndEditable -->			
 	</div>
