--- a/app/service.html
+++ b/app/service.html
@@ -250,7 +250,7 @@
 				<h2 class="text-center" style="color: #307a56">ЗАМЕНА ЭЛЕКТРОПРОВОДКИ. ПАНЕЛЬНЫЙ ДОМ ЗАМЕНА ЭЛЕКТРИКИ</h2>
 				<br>
 				<p class="text-center">
-					<iframe width="900" height="480" class="youtube" src="https://www.youtube.com/embed/7E2KIJdP1R0" frameborder="0" allowfullscreen></iframe>
+					<iframe width="900" height="480" class="youtube" src="https://www.youtube.com/embed/5K0fRmXqlIk" frameborder="0" allowfullscreen></iframe>
 				</p>
 			</main>
 		</section>
